Fix Swagger and JWT connection